--- a/client/index.html
+++ b/client/index.html
@@ -5,19 +5,19 @@
     <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skill Dojo</title>
-    <meta name="description" content="Master music theory through interactive training" />
+    <meta name="description" content="Master real skills through interactive training" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://app.skill-dojo.com/" />
     <meta property="og:title" content="Skill Dojo" />
-    <meta property="og:description" content="Master music theory through interactive training" />
+    <meta property="og:description" content="Master real skills through interactive training" />
     <meta property="og:image" content="https://app.skill-dojo.com/favicon.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Skill Dojo" />
-    <meta name="twitter:description" content="Master music theory through interactive training" />
+    <meta name="twitter:description" content="Master real skills through interactive training" />
     <meta name="twitter:image" content="https://app.skill-dojo.com/favicon.png" />
 
     <!-- Discord -->
