--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Skill Dojo</title>
     <meta name="description" content="Master real skills through interactive training" />
@@ -12,13 +12,13 @@
     <meta property="og:url" content="https://app.skill-dojo.com/" />
     <meta property="og:title" content="Skill Dojo" />
     <meta property="og:description" content="Master real skills through interactive training" />
-    <meta property="og:image" content="https://app.skill-dojo.com/favicon.png" />
+    <meta property="og:image" content="https://app.skill-dojo.com/pc-smile.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:title" content="Skill Dojo" />
     <meta name="twitter:description" content="Master real skills through interactive training" />
-    <meta name="twitter:image" content="https://app.skill-dojo.com/favicon.png" />
+    <meta name="twitter:image" content="https://app.skill-dojo.com/pc-smile.png" />
 
     <!-- Discord -->
     <meta name="theme-color" content="#1a1a2e" />
